--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "backed server for gaming site",
   "main": "server.js",
   "dependencies": {
+    "express": "^4.16.4",
     "knex": "^0.16.3",
     "pg": "^7.8.0"
   },
