--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,11 @@
   "description": "backed server for gaming site",
   "main": "server.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.4",
     "knex": "^0.16.3",
-    "pg": "^7.8.0"
+    "pg": "^7.8.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
