--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "pg": "^7.8.0",
     "request": "^2.88.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^6.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
