imported needed files for mdreactstrap

--- a/client/real_gaming_reviews_frontend/package.json
+++ b/client/real_gaming_reviews_frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "mdbootstrap": "^4.7.0",
+    "mdbreact": "^4.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
