--- a/client/real_gaming_reviews_frontend/package.json
+++ b/client/real_gaming_reviews_frontend/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-stars": "^2.2.5",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
